# telemetrics-client

./: .gitignore  .travis.yml  AUTHORS  Android.mk  CODING-STYLE  Makefile.am  README  README.Android.md  README.md  TODO  android_config_gen.sh  autogen.sh  config_gen.sh  configure.ac  install.sh  security.md
.github/workflows/: ccpp.yml
android/: utils_android.h
build-aux/m4/: telem-systemd.m4
build-aux/make/: cflags.make  ldflags.make
docs/: Doxyfile  README.md  local.mk
docs/man/: telem-record-gen.1  telem-record-gen.1.md  telem-record-gen.1.rst  telemctl.1  telemctl.1.md  telemctl.1.rst  telemd.1  telemd.1.md  telemd.1.rst  telemetrics.conf.5  telemetrics.conf.5.md  telemetrics.conf.5.rst  telemetry.3  telemetry.3.md  telemetry.3.rst  telempostd.1  telempostd.1.rst  telemprobd.1  telemprobd.1.rst  tm_send_record.3
fuzz/: .gitignore  Makefile  README.md  fuzz_config.c  fuzz_iorec.c  fuzz_libtelem.c  local.mk  utils.c  utils.h
scripts/: client-install.sh  local.mk  source-indent.sh  telemctl  tm.cfg
src/: common.c  common.h  configuration.c  configuration.h  iorecord.c  iorecord.h  local.mk  log.h  main.c  post.c  probe.c  retention.c  retention.h  spool.c  spool.h  telemctl.c  telemdaemon.c  telemdaemon.h  telemetry.c  telemetry.h  telemetry.sym  telempostdaemon.c  telempostdaemon.h  util.c  util.h
src/data/: 40-core-ulimit.conf  40-crash-probe.conf.in  bert-probe.service.in  example.1.conf  example.2.conf  example.conf  hprobe.service.in  hprobe.timer  journal-probe-tail.service.in  journal-probe.service.in  klogscanner.service.in  libtelemetry.pc.in  local.mk  oops-probe.service.in  pstore-clean.service.in  pstore-probe.service.in  python-probe.path.in  python-probe.service.in  telemd-update-trigger.service.in  telemd.path.in  telemd.service.in  telemd.socket.in  telemetrics-dirs.conf.in  telemetrics.conf.in  telempostd.path.in  telempostd.service.in  telemprobd-update-trigger.service.in  telemprobd.service.in  telemprobd.socket.in
src/journal/: cli.c  journal.c  journal.h  local.mk
src/nica/: b64enc.c  b64enc.h  hashmap.h  inifile.c  inifile.h  local.mk  nc-string.c  nc-string.h
src/probes/: README.md  bert_probe.c  crash_probe.c  hello.c  journal.c  klog_main.c  klog_scanner.c  klog_scanner.h  local.mk  oops_parser.c  oops_parser.h  oops_probe.c  probe.h  probes.mk  pstore_clean.c  pstore_probe.c  python-probe.c  telem_record_gen.c
tests/: check_config.c  check_daemon.c  check_journal.c  check_libtelemetry.c  check_ncb64.c  check_postd.c  check_probd.c  check_probes.c  check_valgrind  configuration_check.h  create-core.sh  demo.c  local.mk  read_oopsfile.c  read_oopsfile.h  taplib.sh  tests.supp
tests/nc_b64enc_test_files/: foob  foobar  long_text
tests/oops_test_files/: 2or3_digit_loglevel.txt  ALSA.txt  RTNL.txt  bad_page_map.txt  badness.txt  bug_kernel_handle.txt  bug_kernel_handle_new.txt  double_fault.txt  double_fault_DONE.txt  general_protection_fault.txt  irq.txt  kernel_bug_at.txt  kernel_bug_at_DONE.txt  kernel_null_pointer.txt  loglevel_notimestamp.txt  nologlevel_notimestamp.txt  soft_lockup.txt  sysctl_check1  sysctl_check1.txt  sysctl_check2  sysctl_check2.txt  two_warnings.txt  warn_on.txt  warning.txt  watchdog.txt
tests/telempostd/: correct_message  incorrect_headers
